Take_Away_Game/Take_AwayParser.py
# Generated from Take_Away.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class Take_AwayParser ( Parser ):

    grammarFileName = "Take_Away.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'domain'", "'problem'", "'define'", "'agentid'", 
                     "'constants'", "'type'", "'predicates'", "'action'", 
                     "'event'", "'events'", "'pldegree'", "'eventmodel'", 
                     "'parameters'", "'tercondition'", "'precondition'", 
                     "'response'", "'observation'", "'min'", "'max'", "'numbers'", 
                     "'normal'", "'miser'", "'effect'", "'object'", "'increase'", 
                     "'decrease'", "'assign'", "'agent'", "'either'", "'objects'", 
                     "'init'", "'goal'", "'('", "')'", "'['", "']'", "':'", 
                     "'?'", "'.'", "'_'", "'-'", "'+'", "'*'", "'/'", "'='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'and'", "'or'", 
                     "'not'", "'oneof'", "'imply'", "'forall'", "'exists'", 
                     "'when'" ]

    symbolicNames = [ "<INVALID>", "DOMAIN", "PROBLEM", "DEFINE", "AGENTID", 
                      "CONST", "TYPE", "PREDICATE", "ACTION", "EVENT", "EVENTS", 
                      "PLDEGREE", "EVENTMODEL", "PARAMETER", "TERCONDITION", 
                      "PRECONDITION", "RESPONSE", "OBSERVATION", "MIN", 
                      "MAX", "NUMS", "NORMAL", "MISER", "EFFECT", "OBJECT", 
                      "INC", "DEC", "ASSGIN", "AGENT", "EITHER", "OBJS", 
                      "INIT", "GOAL", "LB", "RB", "LSB", "RSB", "COLON", 
                      "QM", "POINT", "UL", "MINUS", "PLUS", "MULT", "DIV", 
                      "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "AND", "OR", 
                      "NOT", "ONEOF", "IMPLY", "FORALL", "EXISTS", "WHEN", 
                      "NAME", "INTEGER", "VAR", "FUNSYM", "WS" ]

    RULE_domain = 0
    RULE_objectDefine = 1
    RULE_numericDefine = 2
    RULE_numericSymbol = 3
    RULE_typeDefine = 4
    RULE_terconditionDefine = 5
    RULE_predicateDefine = 6
    RULE_atomFormSkeleton = 7
    RULE_predicate = 8
    RULE_typeDeclaration = 9
    RULE_type = 10
    RULE_actionDefine = 11
    RULE_actionSymbol = 12
    RULE_emptyOrPreGD = 13
    RULE_emptyOrEffect = 14
    RULE_listName = 15
    RULE_listVariable = 16
    RULE_oneofDefine = 17
    RULE_gd = 18
    RULE_termAtomForm = 19
    RULE_termLiteral = 20
    RULE_constTerm = 21
    RULE_term = 22
    RULE_effect = 23
    RULE_assignop = 24
    RULE_pEffect = 25
    RULE_problemName = 26
    RULE_domainName = 27
    RULE_agentDefine = 28
    RULE_objectDeclaration = 29
    RULE_numericSetting = 30
    RULE_init = 31
    RULE_constTermAtomForm = 32

    ruleNames =  [ "domain", "objectDefine", "numericDefine", "numericSymbol", 
                   "typeDefine", "terconditionDefine", "predicateDefine", 
                   "atomFormSkeleton", "predicate", "typeDeclaration", "type", 
                   "actionDefine", "actionSymbol", "emptyOrPreGD", "emptyOrEffect", 
                   "listName", "listVariable", "oneofDefine", "gd", "termAtomForm", 
                   "termLiteral", "constTerm", "term", "effect", "assignop", 
                   "pEffect", "problemName", "domainName", "agentDefine", 
                   "objectDeclaration", "numericSetting", "init", "constTermAtomForm" ]

    EOF = Token.EOF
    DOMAIN=1
    PROBLEM=2
    DEFINE=3
    AGENTID=4
    CONST=5
    TYPE=6
    PREDICATE=7
    ACTION=8
    EVENT=9
    EVENTS=10
    PLDEGREE=11
    EVENTMODEL=12
    PARAMETER=13
    TERCONDITION=14
    PRECONDITION=15
    RESPONSE=16
    OBSERVATION=17
    MIN=18
    MAX=19
    NUMS=20
    NORMAL=21
    MISER=22
    EFFECT=23
    OBJECT=24
    INC=25
    DEC=26
    ASSGIN=27
    AGENT=28
    EITHER=29
    OBJS=30
    INIT=31
    GOAL=32
    LB=33
    RB=34
    LSB=35
    RSB=36
    COLON=37
    QM=38
    POINT=39
    UL=40
    MINUS=41
    PLUS=42
    MULT=43
    DIV=44
    EQ=45
    NEQ=46
    LT=47
    LEQ=48
    GT=49
    GEQ=50
    AND=51
    OR=52
    NOT=53
    ONEOF=54
    IMPLY=55
    FORALL=56
    EXISTS=57
    WHEN=58
    NAME=59
    INTEGER=60
    VAR=61
    FUNSYM=62
    WS=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DomainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(Take_AwayParser.LB)
            else:
                return self.getToken(Take_AwayParser.LB, i)

        def DEFINE(self):
            return self.getToken(Take_AwayParser.DEFINE, 0)

        def DOMAIN(self):
            return self.getToken(Take_AwayParser.DOMAIN, 0)

        def NAME(self):
            return self.getToken(Take_AwayParser.NAME, 0)

        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(Take_AwayParser.RB)
            else:
                return self.getToken(Take_AwayParser.RB, i)

        def objectDefine(self):
            return self.getTypedRuleContext(Take_AwayParser.ObjectDefineContext,0)


        def typeDefine(self):
            return self.getTypedRuleContext(Take_AwayParser.TypeDefineContext,0)


        def terconditionDefine(self):
            return self.getTypedRuleContext(Take_AwayParser.TerconditionDefineContext,0)


        def actionDefine(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Take_AwayParser.ActionDefineContext)
            else:
                return self.getTypedRuleContext(Take_AwayParser.ActionDefineContext,i)


        def getRuleIndex(self):
            return Take_AwayParser.RULE_domain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDomain" ):
                listener.enterDomain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDomain" ):
                listener.exitDomain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDomain" ):
                return visitor.visitDomain(self)
            else:
                return visitor.visitChildren(self)




    def domain(self):

        localctx = Take_AwayParser.DomainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_domain)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(Take_AwayParser.LB)
            self.state = 67
            self.match(Take_AwayParser.DEFINE)
            self.state = 68
            self.match(Take_AwayParser.LB)
            self.state = 69
            self.match(Take_AwayParser.DOMAIN)
            self.state = 70
            self.match(Take_AwayParser.NAME)
            self.state = 71
            self.match(Take_AwayParser.RB)
            self.state = 72
            self.objectDefine()
            self.state = 73
            self.typeDefine()
            self.state = 74
            self.terconditionDefine()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Take_AwayParser.LB:
                self.state = 75
                self.actionDefine()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjectDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def COLON(self):
            return self.getToken(Take_AwayParser.COLON, 0)

        def OBJS(self):
            return self.getToken(Take_AwayParser.OBJS, 0)

        def listVariable(self):
            return self.getTypedRuleContext(Take_AwayParser.ListVariableContext,0)


        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_objectDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectDefine" ):
                listener.enterObjectDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectDefine" ):
                listener.exitObjectDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObjectDefine" ):
                return visitor.visitObjectDefine(self)
            else:
                return visitor.visitChildren(self)




    def objectDefine(self):

        localctx = Take_AwayParser.ObjectDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_objectDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(Take_AwayParser.LB)
            self.state = 84
            self.match(Take_AwayParser.COLON)
            self.state = 85
            self.match(Take_AwayParser.OBJS)
            self.state = 86
            self.listVariable()
            self.state = 87
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumericDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def COLON(self):
            return self.getToken(Take_AwayParser.COLON, 0)

        def NUMS(self):
            return self.getToken(Take_AwayParser.NUMS, 0)

        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def numericSymbol(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Take_AwayParser.NumericSymbolContext)
            else:
                return self.getTypedRuleContext(Take_AwayParser.NumericSymbolContext,i)


        def getRuleIndex(self):
            return Take_AwayParser.RULE_numericDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericDefine" ):
                listener.enterNumericDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericDefine" ):
                listener.exitNumericDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumericDefine" ):
                return visitor.visitNumericDefine(self)
            else:
                return visitor.visitChildren(self)




    def numericDefine(self):

        localctx = Take_AwayParser.NumericDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_numericDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(Take_AwayParser.LB)
            self.state = 90
            self.match(Take_AwayParser.COLON)
            self.state = 91
            self.match(Take_AwayParser.NUMS)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.numericSymbol()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Take_AwayParser.NAME):
                    break

            self.state = 97
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumericSymbolContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Take_AwayParser.NAME, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_numericSymbol

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericSymbol" ):
                listener.enterNumericSymbol(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericSymbol" ):
                listener.exitNumericSymbol(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumericSymbol" ):
                return visitor.visitNumericSymbol(self)
            else:
                return visitor.visitChildren(self)




    def numericSymbol(self):

        localctx = Take_AwayParser.NumericSymbolContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_numericSymbol)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(Take_AwayParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def COLON(self):
            return self.getToken(Take_AwayParser.COLON, 0)

        def TYPE(self):
            return self.getToken(Take_AwayParser.TYPE, 0)

        def NORMAL(self):
            return self.getToken(Take_AwayParser.NORMAL, 0)

        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def MISER(self):
            return self.getToken(Take_AwayParser.MISER, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_typeDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDefine" ):
                listener.enterTypeDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDefine" ):
                listener.exitTypeDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDefine" ):
                return visitor.visitTypeDefine(self)
            else:
                return visitor.visitChildren(self)




    def typeDefine(self):

        localctx = Take_AwayParser.TypeDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typeDefine)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(Take_AwayParser.LB)
                self.state = 102
                self.match(Take_AwayParser.COLON)
                self.state = 103
                self.match(Take_AwayParser.TYPE)
                self.state = 104
                self.match(Take_AwayParser.NORMAL)
                self.state = 105
                self.match(Take_AwayParser.RB)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(Take_AwayParser.LB)
                self.state = 107
                self.match(Take_AwayParser.COLON)
                self.state = 108
                self.match(Take_AwayParser.TYPE)
                self.state = 109
                self.match(Take_AwayParser.MISER)
                self.state = 110
                self.match(Take_AwayParser.RB)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerconditionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def COLON(self):
            return self.getToken(Take_AwayParser.COLON, 0)

        def TERCONDITION(self):
            return self.getToken(Take_AwayParser.TERCONDITION, 0)

        def emptyOrPreGD(self):
            return self.getTypedRuleContext(Take_AwayParser.EmptyOrPreGDContext,0)


        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_terconditionDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerconditionDefine" ):
                listener.enterTerconditionDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerconditionDefine" ):
                listener.exitTerconditionDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerconditionDefine" ):
                return visitor.visitTerconditionDefine(self)
            else:
                return visitor.visitChildren(self)




    def terconditionDefine(self):

        localctx = Take_AwayParser.TerconditionDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_terconditionDefine)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(Take_AwayParser.LB)
            self.state = 114
            self.match(Take_AwayParser.COLON)
            self.state = 115
            self.match(Take_AwayParser.TERCONDITION)
            self.state = 116
            self.emptyOrPreGD()
            self.state = 117
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def COLON(self):
            return self.getToken(Take_AwayParser.COLON, 0)

        def PREDICATE(self):
            return self.getToken(Take_AwayParser.PREDICATE, 0)

        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def atomFormSkeleton(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Take_AwayParser.AtomFormSkeletonContext)
            else:
                return self.getTypedRuleContext(Take_AwayParser.AtomFormSkeletonContext,i)


        def getRuleIndex(self):
            return Take_AwayParser.RULE_predicateDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicateDefine" ):
                listener.enterPredicateDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicateDefine" ):
                listener.exitPredicateDefine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicateDefine" ):
                return visitor.visitPredicateDefine(self)
            else:
                return visitor.visitChildren(self)




    def predicateDefine(self):

        localctx = Take_AwayParser.PredicateDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_predicateDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(Take_AwayParser.LB)
            self.state = 120
            self.match(Take_AwayParser.COLON)
            self.state = 121
            self.match(Take_AwayParser.PREDICATE)
            self.state = 123 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 122
                self.atomFormSkeleton()
                self.state = 125 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Take_AwayParser.LB):
                    break

            self.state = 127
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomFormSkeletonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def predicate(self):
            return self.getTypedRuleContext(Take_AwayParser.PredicateContext,0)


        def listVariable(self):
            return self.getTypedRuleContext(Take_AwayParser.ListVariableContext,0)


        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def oneofDefine(self):
            return self.getTypedRuleContext(Take_AwayParser.OneofDefineContext,0)


        def getRuleIndex(self):
            return Take_AwayParser.RULE_atomFormSkeleton

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomFormSkeleton" ):
                listener.enterAtomFormSkeleton(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomFormSkeleton" ):
                listener.exitAtomFormSkeleton(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtomFormSkeleton" ):
                return visitor.visitAtomFormSkeleton(self)
            else:
                return visitor.visitChildren(self)




    def atomFormSkeleton(self):

        localctx = Take_AwayParser.AtomFormSkeletonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atomFormSkeleton)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(Take_AwayParser.LB)
            self.state = 130
            self.predicate()
            self.state = 131
            self.listVariable()
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Take_AwayParser.ONEOF:
                self.state = 132
                self.oneofDefine()


            self.state = 135
            self.match(Take_AwayParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PredicateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Take_AwayParser.NAME, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_predicate

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredicate" ):
                listener.enterPredicate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredicate" ):
                listener.exitPredicate(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate" ):
                return visitor.visitPredicate(self)
            else:
                return visitor.visitChildren(self)




    def predicate(self):

        localctx = Take_AwayParser.PredicateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_predicate)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(Take_AwayParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(Take_AwayParser.NAME, 0)

        def LB(self):
            return self.getToken(Take_AwayParser.LB, 0)

        def constTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Take_AwayParser.ConstTermContext)
            else:
                return self.getTypedRuleContext(Take_AwayParser.ConstTermContext,i)


        def RB(self):
            return self.getToken(Take_AwayParser.RB, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_typeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeDeclaration" ):
                listener.enterTypeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeDeclaration" ):
                listener.exitTypeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDeclaration" ):
                return visitor.visitTypeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def typeDeclaration(self):

        localctx = Take_AwayParser.TypeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typeDeclaration)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Take_AwayParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(Take_AwayParser.NAME)
                pass
            elif token in [Take_AwayParser.LB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.match(Take_AwayParser.LB)
                self.state = 141
                self.match(Take_AwayParser.NAME)
                self.state = 142
                self.constTerm()
                self.state = 143
                self.constTerm()
                self.state = 144
                self.match(Take_AwayParser.RB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(Take_AwayParser.OBJECT, 0)

        def AGENT(self):
            return self.getToken(Take_AwayParser.AGENT, 0)

        def NAME(self):
            return self.getToken(Take_AwayParser.NAME, 0)

        def getRuleIndex(self):
            return Take_AwayParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type(self):

        localctx = Take_AwayParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Take_AwayParser.OBJECT) | (1 << Take_AwayParser.AGENT) | (1 << Take_AwayParser.NAME))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(Take_AwayParser.LB)
            else:
                return self.getToken(Take_AwayParser.LB, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(Take_AwayParser.COLON)
            else:
                return self.getToken(Take_AwayParser.COLON, i)

        def ACTION(self):
            return self.getToken(Take_AwayParser.ACTION, 0)

        def actionSymbol(self):
            return self.getTypedRuleContext(Take_AwayParser.ActionSymbolContext,0)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(Take_AwayParser.RB)
            else:
                return self.getToken(Take_AwayParser.RB, i)

        def PARAMETER(self):
            return self.getToken(Take_AwayParser.PARAMETER, 0)

        def listVariable(self):
            return self.getTypedRuleContext(Take_AwayParser.ListVariableContext,0)


        def PRECONDITION(self):
            return self.getToken(Take_AwayParser.PRECONDITION, 0)
